# tauri-plugin-mobile-share

./: Cargo.toml  LICENSE_MIT  README.md  api-iife.js  build.rs  makefile  package.json  rollup.config.js  tsconfig.json
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: SharePlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: share_binary.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
